--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=8.0.0"
     },
     "autoload": {
         "psr-4": {
             "Programster\\JsonSchema\\": "src/",
-            "Programster\\JsonSchema\\Properties": "src/properties"
+            "Programster\\JsonSchema\\Types\\": "src/types/"
         }
     }
 }
