adds support for pattern properties in the objects, so that we can use a regexp to match against the property names, when their exact value may not be known. E.g. the properties are UUIDs in a "map"

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "require": {
         "php": ">=8.0.0"
     },
+    "require-dev": {
+        "swaggest/json-schema": "^0.12.35"
+    },
     "autoload": {
         "psr-4": {
             "Programster\\JsonSchema\\": "src/",
